Ran assignment through the validator

--- a/displayingblocks.html
+++ b/displayingblocks.html
@@ -1,4 +1,4 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,13 +9,13 @@
 </head>
 <body>
     <h1 id="header">
-        <img src="catandninja.png">
+        <img src="catandninja.png" alt="Cat and Ninja Image">
         Display Our Blocks!
-        <img src="github.jpg">
+        <img src="github.jpg" alt="Git Hub Image">
     </h1>
     <div id="body">
-        <img class="one"src="dojocat.jpg" alt="Dojo Cat">
-        <img  class="two" src="heisencat.png" at="Heisen Cat">
+        <img class="one" src="dojocat.jpg" alt="Dojo Cat">
+        <img  class="two" src="heisencat.png" alt="Heisen Cat">
         <img  class="one" src="chellocat.jpg" alt="Oktober Cat">
         <img class="two" src="ironcat.png" alt="Iron Cat">
         <img  class="one" src="mario.png" alt="Iron Cat">
